2007-08-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Large SVG filter rework. Bring it back in a useable state.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=5527 (Filters need subregion support)
        Fixes: http://bugs.webkit.org/show_bug.cgi?id=5579 (WebKit+SVG renders full-filters-example incorrectly)
        Fixes: http://bugs.webkit.org/show_bug.cgi?id=5976 (filterUnits="userSpaceOnUse" is broken (breaking feTile test case))
        Fixes: http://bugs.webkit.org/show_bug.cgi?id=12064 (Need function for manual style-resolution for things like gradient stops)

        filters-blend-01-b.svg & filters-example-01-b.svg & filters-displace-01-b.svg & filters-diffuse-01-f.svg are fixed now.

        In detail:
        - flood-color & flood-opacity have been incorrectly resolved on the <feBlend> parent element!
        - sizing of filter region was truncated in some cases, as the bbox was used to resolve the needed filter region instead of the filter rect
        - add subregion support to all filter primitives (primitiveUnits & filterUnits handled in all cases)
        - WKDisplacmentMap.cikernel incorrectly flipped the y-axis.
        - Correctly specify default values for all filter primitives in ksvg2/svg!
        - Initialize all variables of the SVGFE* classes in platform/graphics/svg/filters.
        - Fix 'flood-color' initial value (was set to the _stop_ color initial value)
          -> both initial values were pointing to 'black' though, so it was no visible problem.
        - Parse 'lighting-color' css property, no more hacking in SVGFEDiffuseLighting.
          -> Correct it's initial from black to white value fixes SVG lighting filters!
        - Add diffuseConstant support to feDiffuseLighting filter.
        - Centralize manual style resolution (needed for stop-color, flood-color & flood-opacity, lighting-color)

        * ksvg2/css/SVGCSSParser.cpp:
        * ksvg2/css/SVGCSSStyleSelector.cpp: